--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
-    "token":"TOKEN DO SEU BOT",
-    "prefix":"PREFIXO DO SEU BOT"
+    "token":"NzI5NjA5MzA4MDAxNzk2MTA2.GaF5CY.sZzwIKWxFPQJE2dJM1--3nWrRRT0R24999dk3A",
+    "prefix":"&"
 }
